--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
   </header>
 
   <main>
-    <img src="images/art1.jpg" alt="Artwork">
+    <img src="images/art1.jpg" alt="Artwork test">
     <p>Original artworks inspired by South African history.</p>
   </main>
 
